@@ -1,3 +1,7 @@
+Fri Sep  3 16:40:39 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>
+
+	* n-group-by.rb, n-mod-group-by.rb: REQ#246対応
+
 Wed Sep  1 18:12:57 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>
 
 	* port-marshaled-queue.rb: BUG#245対応
